# TP3_IS

./: .gitignore  README.md
crawler/: crawler.py  crawler.service  crawler.timer
data_processor/: chunker.py  enricher.py  webhook.py
data_processor/cobol_service/: sma_calc.cbl
k8s/data_processor/: .env  fetch_api.py  get_bucket.py  helper.py  main.py  send.py
k8s/data_processor/cobol_service/: Dockerfile
k8s/xml_service/: Cargo.toml  bi_request.proto
k8s/xml_service/src/: csv_parser.rs  main.rs  types.rs  webhook.rs
vps/: .dockerignore  BI_Service_Postman.json  docker-compose.yml  gitignore
vps/bi_service/: .gitignore  Dockerfile  package-lock.json  package.json
vps/bi_service/proto/: bi_request.proto
vps/bi_service/src/: index.js
vps/bi_service/src/clients/: xmlServiceClient.js
vps/bi_service/src/http/: httpServer.js
vps/bi_service/src/utils/: queryParser.js
vps/visualization/: Dockerfile  index.html  package.json  script.js  server.js  styles.css
vps/visualization/assets/: README.md
xml_service/: .dockerignore  Cargo.toml
xml_service/converter/: Cargo.toml
xml_service/converter/src/: main.rs
xml_service/db_sender/: Cargo.toml  Dockerfile
xml_service/db_sender/src/: main.rs
xml_service/grpc_server/: Cargo.toml  Dockerfile  build.rs
xml_service/grpc_server/proto/: bi_request.proto
xml_service/grpc_server/src/: main.rs
xml_service/validator/: Cargo.toml  Dockerfile
xml_service/validator/src/: main.rs
