[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
aws-config = "1.0.0"
aws-sdk-s3 = "1.0.0"
base64ct = "=1.6.0" 
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
anyhow = "1.0"
chrono = "0.4"