[package]
name = "db_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"